--- a/movie/src/styles/globals.css
+++ b/movie/src/styles/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -24,4 +24,32 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f0f0f0;
+  padding: 25px;
+ }
+ 
+ .footer p {
+  margin: 5px 0;
+  font-weight: bold;
+  font-size: 19px;
+ }
+ 
+ .footer a {
+  color: #000;
+  text-decoration: none;
+  margin: 5px 15px;
+  font-weight: bold;
+  font-size: 14px;
+
+ }
+ 
+ .footer a:hover {
+  text-decoration: underline;
+ }
