--- a/movie/src/styles/globals.css
+++ b/movie/src/styles/globals.css
@@ -26,3 +26,10 @@ body {
     rgb(var(--background-start-rgb));
 } */
 
+.ActressCard{
+  width:"290px";
+  padding:"5px"; 
+  border-Radius:"10px"; 
+  margin:"17px";
+  background-color:"rgb(200, 209, 216)"
+}
